--- a/config/mpa-template.html
+++ b/config/mpa-template.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="zh">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="<%= title %>" />
-    <title><%= title %></title>
-  </head>
-  <body>
-    <div id="app" />
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="title" content="<%= title %>" />
+  <title>
+    <%= title %>
+  </title>
+</head>
+
+<body>
+  <div id="app" />
+</body>
+
 </html>
